# ai-agent-hackathon-zenn

./: .env.example  .gitignore  Makefile  README.md  openapi.json  pyproject.toml
app/: __init__.py  agent_engine_app.py  vertex_ai_agent.py
app/agents/: __init__.py  unified_nutrition_agent.py
app/auth/: firebase_auth.py
app/data/: __init__.py  foods.py  nutrition.py
app/tools/: __init__.py  nutrition_analyzer.py  recipe_suggester.py  vertex_nutrition_analyzer.py
app/utils/: input_validation.py  tracing.py  typing.py
cloud_functions/agent_engine_stream/: api_models.py  environment_config.py  firebase_auth_utils.py  main.py  openapi.yaml  requirements.txt
cloud_functions/agent_engine_stream/handlers/: __init__.py  base.py  factory.py  local.py  remote.py
cloud_functions/agent_engine_stream/routers/: __init__.py  chat.py  health.py  sessions.py
cloud_functions/agent_engine_stream/services/: __init__.py  operation_service.py
cloud_functions/agent_engine_stream/utils/: __init__.py  agent_utils.py  cors.py  error_handling.py  routing.py
cloud_functions/image_recognition/: .gcloudignore  README.md  deploy.sh  firebase_auth_utils.py  main.py  requirements.txt  run_local.sh
deployment/cd/: deploy-to-prod.yaml  frontend-prod.yaml  frontend-staging.yaml  staging.yaml
deployment/ci/: frontend_pr_checks.yaml  pr_checks.yaml
deployment/terraform/: build_triggers.tf  frontend.tf  variables.tf
deployment/terraform/dev/: apis.tf  iam.tf  log_sinks.tf  service_accounts.tf  storage.tf  variables.tf  vertex_ai_search.tf
deployment/terraform/vars/: env.tfvars
frontend/: .env.example  .gcloudignore  .gitignore  Dockerfile  components.json  jest.config.js  next.config.ts  openapitools.json  orval.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: upload_pdfs_to_vertex_search.py
tests/integration/: test_agent.py  test_agent_engine_app.py  test_image_recognition.py  test_token_streaming.py
tests/unit/: test_image_recognition.py  test_lifestyle_advisor.py  test_main_agent.py  test_security.py
(+72 files in other folders)
